--- a/index.html
+++ b/index.html
@@ -373,6 +373,14 @@ footer{
                 <p> for Garment design.</p>
             </div>
         </div>
+         </div>
+         <div class="project">
+            <img src="Group 15 (1).jpg" alt="clg poster ">
+            <div class="project-content">
+                <h3>wire design </h3>
+                <p> for Garment design.</p>
+            </div>
+        </div>
     </div>
 </section>
 
